--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,50 +10,23 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
+      - name: Login to Docker
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
       - name: get version
         id: get_tag
         uses: "WyriHaximus/github-action-get-previous-tag@v1"
         with:
-          fallback: ""
-      - name: Login to Docker
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Build and push segonly GPU
-        uses: docker/build-push-action@v4
-        with:
-          context: .
-          push: true
-          tags: deepmi/fastsurfer:segonly-gpu-${{ steps.get_tag.outputs.tag }}
-          file: Docker/Dockerfile_FastSurferCNN
-      - name: Build and push full CPU
-        uses: docker/build-push-action@v4
-        with:
-          context: .
-          push: true
-          tags: deepmi/fastsurfer:cpu-${{ steps.get_tag.outputs.tag }}
-          file: Docker/Dockerfile_CPU
-      - name: Build and push segonly CPU
-        uses: docker/build-push-action@v4
-        with:
-          context: .
-          push: true
-          tags: deepmi/fastsurfer:segonly-cpu-${{ steps.get_tag.outputs.tag }}
-          file: Docker/Dockerfile_FastSurferCNN_CPU
-      - name: Build and push surfonly CPU
-        uses: docker/build-push-action@v4
-        with:
-          context: .
-          push: true
-          tags: deepmi/fastsurfer:surfonly_${{ steps.get_tag.outputs.tag }}
-          file: Docker/Dockerfile_reconsurf
-      - name: Build and push full GPU
-        uses: docker/build-push-action@v4
-        with:
-          context: .
-          push: true
-          tags: deepmi/fastsurfer:gpu-${{ steps.get_tag.outputs.tag }}, deepmi/fastsurfer:latest
-          file: Docker/Dockerfile
+          fallback: "dev"
+      - name: Build Docker image GPU
+        run: python Docker/build.py --device gpu --tag girodia/fastsurfer:gpu-${{ steps.get_tag.outputs.tag }}
+      - name: Build Docker image CPU
+        run: python Docker/build.py --device cpu --tag girodia/fastsurfer:cpu-${{ steps.get_tag.outputs.tag }}
+      - name: Push Docker image GPU
+        run: docker push girodia/fastsurfer:gpu-${{ steps.get_tag.outputs.tag }}
+      - name: Push Docker image CPU
+        run: docker push girodia/fastsurfer:cpu-${{ steps.get_tag.outputs.tag }}
